popover:  show also  on double click event

--- a/pmEvent/en.lproj/MainMenu.xib
+++ b/pmEvent/en.lproj/MainMenu.xib
@@ -1843,10 +1843,10 @@
 				<nil key="NSNextResponder"/>
 				<reference key="NSContentViewController" ref="595572336"/>
 				<int key="NSAppearance">0</int>
-				<int key="NSBehavior">1</int>
+				<int key="NSBehavior">0</int>
 				<double key="NSContentWidth">0.0</double>
 				<double key="NSContentHeight">0.0</double>
-				<bool key="NSAnimates">YES</bool>
+				<bool key="NSAnimates">NO</bool>
 			</object>
 			<object class="NSCustomView" id="473302818">
 				<reference key="NSNextResponder"/>
@@ -3054,14 +3054,6 @@
 						</object>
 					</object>
 					<int key="connectionID">1281</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="641132376"/>
-						<reference key="destination" ref="1023554155"/>
-					</object>
-					<int key="connectionID">1283</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
